# BEVfusion_code

./: BEVfusion.yml  BEVfusion_main.cpp  CMakeLists.txt  README.md  bench.txt  clean.sh  id_rsa_server  run.sh  setup.py  unlimit.sh
camera.vtransform/: 0.weight.txt  3.weight.txt  6.bias.txt  6.weight.txt  camera.vtransform.c
camera_backbone/: CMakeLists.txt  camera_backbone.cpp  camera_backbone.h
camera_vtransform/: 0.bias.txt  3.bias.txt  CMakeLists.txt  camera_vtransform.cpp  camera_vtransform.h  readTensorFromFile.h
fuser/: 509.txt  510.txt  CMakeLists.txt  fuser.c  fuser.cpp  fuser.h  parent.decoder.backbone.blocks.0.0.bias.txt  parent.decoder.backbone.blocks.0.12.bias.txt  parent.decoder.backbone.blocks.0.12.weight.txt  parent.decoder.backbone.blocks.0.15.bias.txt  parent.decoder.backbone.blocks.0.15.weight.txt  parent.decoder.backbone.blocks.0.3.bias.txt  parent.decoder.backbone.blocks.0.3.weight.txt  parent.decoder.backbone.blocks.0.6.bias.txt  parent.decoder.backbone.blocks.0.6.weight.txt  parent.decoder.backbone.blocks.0.9.bias.txt  parent.decoder.backbone.blocks.0.9.weight.txt  parent.decoder.backbone.blocks.1.0.bias.txt  parent.decoder.backbone.blocks.1.12.bias.txt  parent.decoder.backbone.blocks.1.15.bias.txt  parent.decoder.backbone.blocks.1.3.bias.txt  parent.decoder.backbone.blocks.1.6.bias.txt  parent.decoder.backbone.blocks.1.9.bias.txt  parent.decoder.neck.deblocks.0.0.bias.txt  parent.decoder.neck.deblocks.0.0.weight.txt  parent.decoder.neck.deblocks.1.1.bias.txt  parent.decoder.neck.deblocks.1.1.running_mean.txt  parent.decoder.neck.deblocks.1.1.running_var.txt  parent.decoder.neck.deblocks.1.1.weight.txt  parent.fuser.0.bias.txt  readTensorFromFile.h
head/: CMakeLists.txt  head.cpp
lidar_backbone/: CMakeLists.txt  lidar_backbone.cpp  lidar_backbone.h  main.cpp  sparse_conv.h
main/: CMakeLists.txt  main.cpp
